chore: finalize security config and gitignore before history purge